--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -177,15 +177,23 @@
                            
                             <div class="row g-4 text-center align-items-center justify-content-center pt-4" >
                           
-                            <div style="background-color: red;" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary">
-                              <script   src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_bilBagOBVTi4lE"
-                              data-amount={{response.amount}} data-currency={{response.currency}} data-buttontext="Place Order"
-                              data-name="{{request.user}}" data-theme.color="#F37254" data-description="" data-image=""
-                              data-prefill.name={{request.user.username}} data-prefill.email={{request.user.email}}>
-                              </script>
-
-
-                            </div>
+                                <a href="{% url order %}" onclick="document.getElementById('razorpayForm').submit();">
+                                    <div id="razorpayForm" style="background-color: red;" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary">
+                                        <script src="https://checkout.razorpay.com/v1/checkout.js"
+                                                data-key="rzp_test_bilBagOBVTi4lE"
+                                                data-amount="{{response.amount}}"
+                                                data-currency="{{response.currency}}"
+                                                data-buttontext="Place Order"
+                                                data-name="{{request.user}}"
+                                                data-theme.color="#F37254"
+                                                data-description=""
+                                                data-image=""
+                                                data-prefill.name="{{request.user.username}}"
+                                                data-prefill.email="{{request.user.email}}">
+                                        </script>
+                                    </div>
+                                </a>
+                                
 
 
 
