--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -36,11 +36,11 @@
         {% if count < 1 %}
         <div style="text-align:center">
 
-<img style="height: 200px;width:200px" src="{% static 'img\cart.png.' %}">
+<img style="height: 200px;width:200px" src="{% static 'img\cart.png.' %}" class="mt-5">
 <h4 style="color: rgb(18, 17, 17);">your cart is empty</h4>
 </div>
 <div style="text-align: center;">
-<a style="align-items: center;" href="{% url 'shop' %}" class="btn btn-danger     cart-btn-transform m-3" data-abc="true">continue shopping</a>
+<a style="align-items: center;" href="{% url 'shop' %}" class="btn btn-danger     cart-btn-transform m-3" data-abc="true" >continue shopping</a>
 </div>
     {% else %}
 
@@ -119,7 +119,7 @@
                     </style>
                     
                     <div class="center-button">
-                        <a href="{% url 'shop' %}"><button class="btn border-secondary rounded-pill px-2 py-2 text-danger" type="button">Continue Shopping</button></a>
+                        <a href="{% url 'shop' %}"><button class="btn rounded-pill px-2 py-2 text-light" type="button" style="background-color:#81C408;">Continue Shopping</button></a>
                     </div>
                     
                             
@@ -128,7 +128,7 @@
                     {% csrf_token %}
                 <div class="mt-5">
                     <input type="text" class="border-0 border-bottom rounded me-5 py-3 mb-4" name="code" placeholder="Coupon Code">
-                    <button  class="btn border-secondary rounded-pill px-4 py-3 text-primary"  type="submit">Apply Coupon</button>
+                    <button  class="btn rounded-pill px-4 py-3 text-light"  type="submit"  style="background-color: #81C408;">Apply Coupon</button>
                 </div>  
             </form>
                 <div class="row g-4 justify-content-end">
@@ -136,7 +136,7 @@
                     <div class="col-sm-8 col-md-7 col-lg-6 col-xl-4">
                         <div class="bg-light rounded">
                             <div class="p-4">
-                                <h1 class="display-6 mb-4">Cart <span class="fw-normal">Total</span></h1>
+                                <h1 class="display-6 mb-4">Cart Total <span class="fw-normal"></span></h1>
                                 <div class="d-flex justify-content-between mb-4">
                                     <h5 class="mb-0 me-4">Subtotal:</h5>
                                     <p class="mb-0">{{sub_total}}</p>
@@ -159,7 +159,7 @@
                                 <h5 class="mb-0 ps-4 me-4">Total</h5>
                                 <p class="mb-0 pe-4"> {{t_price}}</p>
                             </div>
-                            <a href="{% url 'checkout' %}"><button class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" type="button">Proceed Checkout</button></a>
+                            <a href="{% url 'checkout' %}"><button class="btn  rounded-pill px-4 py-3 text-light text-uppercase mb-4 ms-4" type="button" style="background-color: #81C408;">Proceed Checkout</button></a>
                             
                         </div>
                     </div>
