--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -59,7 +59,8 @@
                                 <input type="text" class="w-100 form-control border-0 py-3 mb-4" placeholder="Your Name" name="name">
                                 <input type="email" class="w-100 form-control border-0 py-3 mb-4" placeholder="Enter Your Email" name="email">
                                 <textarea class="w-100 form-control border-0 mb-4" rows="5" cols="10" placeholder="Your Message" name="message"></textarea>
-                                <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Submit</button>
+                                <button class="w-100 btn form-control py-3 " type="submit"  style="background-color: #81C408;color
+                                :white">Submit</button>
                             </form>
                         </div>
                         <div class="col-lg-5">
