--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -7,18 +7,21 @@
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-       
+        
       </div>
      
       <div class="modal-body d-flex align-items-center">
+        <form action="{% url 'search' %}" >
         <div class="input-group w-75 mx-auto d-flex">
-          <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1" />
+          
+          <input type="search" name="srh" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1" />
           <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
         </div>
+      </form>
       </div>
-      
+
     </div>
-   
+    
   </div>
 
 </div>
@@ -51,12 +54,12 @@
           </div>
       
           <div class="col-xl-3">
-           
-
-
             
 
 
+                
+ 
+ 
             <form method="get" action="{% url 'shop' %}" id="fruitform">
               <div class=" ps-3 py-3 rounded d-flex mb-4">
                 <label for="fruits" style="margin-left: 650px;"></label>
@@ -120,9 +123,9 @@
               <div class="col-lg-12">
                   <div class="mb-3">
                       <h4 class="mb-2">Price</h4>
-                   
-                      <input type="range" class="form-range w-100" id="rangeInput"   value="{{max1}}" oninput="amount.value=rangeInput.value" min="0" max="1500" name="max1">
                     
+                      <input type="range" class="form-range w-100" id="rangeInput"   value="{{max1}}" oninput="amount.value=rangeInput.value" min="0" max="1500" name="max1">
+                          
                       <output id="amount" name="amount" for="rangeInput">{{max1}}</output>
 
                       <br/>
